# backend/docs/swagger/swagger.json
@@ -2855,7 +2855,7 @@
                 "tags": [
                     "admin"
                 ],
-                "summary": "Send mail to all users",
+                "summary": "Start sending mail to all users (async)",
                 "operationId": "admin-mail-all-users",
                 "parameters": [
                     {
@@ -2881,21 +2881,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Email sending results with delivery statistics",
+                        "description": "Mail sending started",
                         "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/handlers.APIResponse"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/handlers.SendMailResponse"
-                                        }
-                                    }
-                                }
-                            ]
+                            "$ref": "#/definitions/handlers.APIResponse"
                         }
                     },
                     "400": {
@@ -3883,26 +3871,6 @@
                 }
             }
         },
-        "handlers.SendMailResponse": {
-            "type": "object",
-            "properties": {
-                "failed_emails": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "failed_emails_count": {
-                    "type": "integer"
-                },
-                "successful_emails": {
-                    "type": "integer"
-                },
-                "total_users": {
-                    "type": "integer"
-                }
-            }
-        },
         "handlers.TwinResponse": {
             "type": "object",
             "properties": {
@@ -4240,14 +4208,16 @@
                 "billing",
                 "user",
                 "connected",
-                "node"
+                "node",
+                "admin"
             ],
             "x-enum-varnames": [
                 "NotificationTypeDeployment",
                 "NotificationTypeBilling",
                 "NotificationTypeUser",
                 "NotificationTypeConnected",
-                "NotificationTypeNode"
+                "NotificationTypeNode",
+                "NotificationTypeAdmin"
             ]
         },
         "models.SSHKey": {
